# huntkit

./: CONTRIBUTING.md  Dockerfile  INTEGRATIONS.md  INTEROP.md  README.md  ROADMAP.md  conftest.py  install.ps1  install.sh  layman.md  pyproject.toml
.github/workflows/: ci.yml
attackmap/: __init__.py  __main__.py  cli.py  connect.py  core.py  mcp_server.py
demos/02-deep/: SCENARIO.md  network.csv
deploy/: docker-compose.yml  k8s.yaml
deploy/terraform/: main.tf
docs/: ADVANCED.md  ARCHITECTURE.md  DEPLOY.md  INSTALL.md
elastdetect/: __init__.py  __main__.py  cli.py  deploy.py  diff.py  lint.py  rules.py  sarif.py  validate.py
examples/: help.txt  rules.txt  version.txt
huntkit/: block_cli.py  rules_cli.py  suite.py
huntkit/data/: blocklist.txt
huntkit/rules/: credaccess_discovery_exfil.json  execution_defense_evasion.json  persistence_privesc.json
integrations/: webhook.py
ports/: README.md
ports/go/: go.mod  main.go
ports/javascript/: index.js  package.json
ports/rust/: Cargo.toml
ports/rust/src/: main.rs
qa/attackmap/demos/01-basic/: SCENARIO.md  findings.json
qa/attackmap/demos/02-deep/: SCENARIO.md  incident_findings.txt
qa/attackmap/tests/: test_connect.py  test_deep.py  test_smoke.py
qa/elastdetect/examples/: help.txt  version.txt
qa/elastdetect/tests/: conftest.py  test_cli.py  test_demos.py  test_diff.py  test_lint.py  test_rules_loader.py  test_sarif.py  test_validate.py
qa/sentrylog/demos/: events.json
qa/stixgen/tests/: test_connect.py  test_smoke.py
qa/yararun/tests/: test_connect.py  test_deep.py  test_extended.py
sentrylog/: __init__.py  __main__.py  cli.py  connect.py  core.py  mcp_server.py
stixgen/: __init__.py  __main__.py  cli.py  connect.py  core.py  mcp_server.py
tests/: test_connect.py  test_deep.py  test_hardening.py  test_rules_block.py  test_smoke.py
yararun/: __init__.py  __main__.py  cli.py  connect.py  core.py  mcp_server.py
(+59 files in other folders)
