[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-huntkit"
version = "1.0.0"
description = "Detection-engineering kit — IOCs, YARA, Sigma, Elastic, ATT&CK mapping, a growing rule library and a live-updatable blocklist. One command, offline."
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["detection-engineering", "detection-as-code", "sigma", "yara", "ioc", "threat-hunting", "mitre-attack", "blocklist", "siem", "security"]
classifiers = ["Development Status :: 5 - Production/Stable", "License :: Other/Proprietary License", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12"]
dependencies = []

[project.optional-dependencies]
connect = ["cognis-connect @ git+https://github.com/cognis-digital/cognis-connect.git"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/huntkit"

[project.scripts]
huntkit = "huntkit.suite:main"
sentrylog = "sentrylog.cli:main"
iocextract = "iocextract.cli:main"
iocrep = "iocrep.cli:main"
stixgen = "stixgen.cli:main"
yararun = "yararun.cli:main"
yaragen = "yaragen.cli:main"
sigmacheck = "sigmacheck.cli:main"
elastdetect = "elastdetect.cli:main"
attackmap = "attackmap.cli:main"

[tool.hatch.build.targets.wheel]
packages = ['huntkit', 'sentrylog', 'iocextract', 'iocrep', 'stixgen', 'yararun', 'yaragen', 'sigmacheck', 'elastdetect', 'attackmap']
artifacts = ["huntkit/rules/*.json", "huntkit/data/*"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["qa", "tests"]
addopts = "--import-mode=importlib"
